# workflow-automation-aiops

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
docs/: business_requirements.md
docs/deployment/: docker.md  dockerhub-setup.md  kubernetes.md
docs/tutorial/: 01_getting_started.md  02_document_formats.md  03_ai_evaluation.md  04_workflow_orchestration.md  05_building_ui.md
helm/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
scripts/: deploy.sh
src/: __init__.py  ai_evaluator.py  api.py  document_parser.py  models.py  workflow.py
tests/: .gitignore  conftest.py  test_api.py  test_document_parser.py  test_models.py
tests/sample_documents/: python_quiz.txt
ui/: streamlit_app.py
